[basics] Adding Basic Data Types

--- a/basics/basics.html
+++ b/basics/basics.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 <h1 id="greeting"></h1>
+
+<h3>Adding Basic Data Types</h3>
+<p><b>Integer:<br></b> <span id="int"> </span></p>
+<p> <b>Decimal: <br>  </b> <span id="dec"></span></p>
+<p><b>String:   <br>  </b><span id="str"></span></p>
 <script src="basics.js"></script>
 
 </body>
