[basics] Conditional Statements

--- a/basics/basics.html
+++ b/basics/basics.html
@@ -13,6 +13,12 @@
 <p><b>Integer:<br></b> <span id="int"> </span></p>
 <p> <b>Decimal: <br>  </b> <span id="dec"></span></p>
 <p><b>String:   <br>  </b><span id="str"></span></p>
+
+<h3>Conditional Statements</h3>
+<p><b>Pass:<br></b> <span id="pass"> </span></p>
+<p> <b>Average: <br>  </b> <span id="avg"></span></p>
+<p><b>Fail:   <br>  </b><span id="fail"></span></p>
+
 <script src="basics.js"></script>
 
 </body>
